fix: tx logic and tx path
