# server/openapi.json
@@ -79,6 +79,44 @@
         "summary": "Get Entities"
       }
     },
+    "/txs/{tx_hash}": {
+      "get": {
+        "parameters": [
+          {
+            "in": "path",
+            "name": "tx_hash",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful response"
+          },
+          "404": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPError"
+                }
+              }
+            },
+            "description": "Not found"
+          }
+        },
+        "tags": [
+          "Registry Data"
+        ],
+        "summary": "Get Tx"
+      }
+    },
     "/chains/{chain}": {
       "get": {
         "parameters": [
@@ -115,44 +153,6 @@
           "Registry Data"
         ],
         "summary": "Get Chain"
-      }
-    },
-    "/txs/hash/{tx_hash}": {
-      "get": {
-        "parameters": [
-          {
-            "in": "path",
-            "name": "tx_hash",
-            "schema": {
-              "type": "string"
-            },
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful response"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPError"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "tags": [
-          "Registry Data"
-        ],
-        "summary": "Get Tx"
       }
     },
     "/entities/{entity_slug}": {
